initial attempt at position tracking

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -10,6 +10,7 @@
   "MUSIC VOLUME": "music volume",
   "SFX VOLUME": "sfx volume",
   "SHOW FPS": "show fps",
+  "SEND PLAY DATA": "send play data",
   "RESET SETTINGS AND EXIT": "reset settings & exit",
   "RESET + EXIT": "RESET + EXIT"
 }
