--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -10,7 +10,7 @@
   "MUSIC VOLUME": "volume de la musique",
   "SFX VOLUME": "volume de sfx",
   "SHOW FPS": "montrer fps",
-  "SEND PLAY DATA": "envoyer jouer données",
+  "SEND PLAY DATA": "evoyer les données du jeu",
   "RESET SETTINGS AND EXIT": "remettre cadres & sortie",
   "RESET + EXIT": "remettre + sortie"
 }
