--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -11,6 +11,6 @@
   "SFX VOLUME": "volume sfx",
   "SHOW FPS": "montrer fps",
   "SEND PLAY DATA": "envoyer et lire les données du jeu",
-  "RESET SETTINGS AND EXIT": "réinitialiser paramètres et quitter",
+  "RESET SETTINGS AND EXIT": "réinitialiser les paramètres et quitter",
   "RESET + EXIT": "réinitialiser + quitter"
 }
